force-app/main/default/objects/clofor_com_cfs__ApplicationCargo__c/fields/clofor_com_cfs__ApplicationID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ApplicationID__c</fullName>
    <label>Application ID</label>
    <referenceTo>clofor_com_cfs__Application__c</referenceTo>
    <relationshipName>ApplicationCargoApplication</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>