force-app/main/default/objects/clofor_com_cfs__ApplicationCargo__c/fields/clofor_com_cfs__ApplicationRecordTypeFormula__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ApplicationRecordTypeFormula__c</fullName>
    <formula>clofor_com_cfs__ApplicationID__r.RecordType.Name</formula>
    <label>Application Record Type</label>
    <type>Text</type>
</CustomField>