force-app/main/default/objects/clofor_com_cfs__ApplicationCargo__c/fields/clofor_com_cfs__ApplicationTypeFormula__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ApplicationTypeFormula__c</fullName>
    <formula>text(clofor_com_cfs__ApplicationID__r.clofor_com_cfs__ApplicationType__c)</formula>
    <label>Application Type</label>
    <type>Text</type>
</CustomField>