force-app/main/default/objects/clofor_com_cfs__ApplicationCargo__c/fields/clofor_com_cfs__BodyPartClassification__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BodyPartClassification__c</fullName>
    <formula>text(clofor_com_cfs__CargoID__r.clofor_com_cfs__BodyPartClassification__c)</formula>
    <label>Body &amp; Part Classification</label>
    <type>Text</type>
</CustomField>