force-app/main/default/objects/clofor_com_cfs__ApplicationCargo__c/fields/clofor_com_cfs__ConfirmStatus__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ConfirmStatus__c</fullName>
    <label>Confirm Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__ConfirmStatus</valueSetName>
    </valueSet>
</CustomField>