force-app/main/default/objects/clofor_com_cfs__ApplicationCargo__c/fields/clofor_com_cfs__ExpectedDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ExpectedDeliveryDate__c</fullName>
    <formula>clofor_com_cfs__ApplicationID__r.clofor_com_cfs__ExpectedDeliveryDate__c</formula>
    <label>Expected Delivery Date</label>
    <type>Date</type>
</CustomField>