force-app/main/default/objects/clofor_com_cfs__ApplicationCargo__c/fields/clofor_com_cfs__SlipNumber__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SlipNumber__c</fullName>
    <formula>clofor_com_cfs__ApplicationID__r.clofor_com_cfs__SlipNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Slip Number</label>
    <type>Text</type>
</CustomField>